<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_app_btn_text">SPOTIFY STREAMER</string>
    <string name="score_app_btn_text">SCORES APP</string>
    <string name="library_app_btn_text">LIBRARY APP</string>
    <string name="build_app_btn_text">BUILD IT BIGGER</string>
    <string name="reader_app_btn_text">XYZ READER</string>
    <string name="my_own_app_btn_text">CAPSTONE: MY OWN APP</string>
    <string name="layout_title_lbl_text">My Nanodegree Apps!</string>
    <string name="spotify_app_toast_text">This button will launch my spotify app!</string>
    <string name="score_app_toast_text">This button will launch my score app!</string>
    <string name="library_app_toast_text">This button will launch my library app!</string>
    <string name="build_app_toast_text">This button will launch my build it app!</string>
    <string name="reader_app_toast_text">This button will launch my reader app!</string>
    <string name="my_own_app_toast_text">This button will launch my capstone app!</string>
</resources>
