<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main_relLayout"
    android:background="#ffe0deda">

    <Button
        android:layout_width="260dip"
        android:layout_height="wrap_content"
        android:text="@string/spotify_app_btn_text"
        android:id="@+id/spotify_app_btn"
        android:layout_marginTop="97dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#ffff9500"
        android:textColor="#ff000000" />

    <Button
        android:layout_width="260dip"
        android:layout_height="wrap_content"
        android:text="@string/score_app_btn_text"
        android:id="@+id/score_app_btn"
        android:layout_below="@+id/spotify_app_btn"
        android:layout_alignLeft="@+id/spotify_app_btn"
        android:layout_alignStart="@+id/spotify_app_btn"
        android:backgroundTint="#ffff9500"
        android:textColor="#ff000000" />

    <Button
        android:layout_width="260dip"
        android:layout_height="wrap_content"
        android:text="@string/library_app_btn_text"
        android:id="@+id/library_app_btn"
        android:layout_below="@+id/score_app_btn"
        android:layout_alignLeft="@+id/score_app_btn"
        android:layout_alignStart="@+id/score_app_btn"
        android:backgroundTint="#ffff9500"
        android:textColor="#ff000000" />

    <Button
        android:layout_width="260dip"
        android:layout_height="wrap_content"
        android:text="@string/build_app_btn_text"
        android:id="@+id/build_app_btn"
        android:layout_below="@+id/library_app_btn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#ffff9500"
        android:textColor="#ff000000" />

    <Button
        android:layout_width="260dip"
        android:layout_height="wrap_content"
        android:text="@string/reader_app_btn_text"
        android:id="@+id/reader_app_btn"
        android:layout_below="@+id/build_app_btn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#ffff9500"
        android:textColor="#ff000000" />

    <Button
        android:layout_width="260dip"
        android:layout_height="wrap_content"
        android:text="@string/my_own_app_btn_text"
        android:id="@+id/my_own_app_btn"
        android:layout_below="@+id/reader_app_btn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#ffde0500"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/layout_title_lbl_text"
        android:id="@+id/layout_title_lbl"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

</RelativeLayout>
